syntax = "proto3";
package gw2l;
import "common.proto";
import "mysql_database_table.proto";
import "google/protobuf/empty.proto";
option cc_generic_services = true;



message LoginRequest
{
  string account = 1;
  string password = 2;
  uint64 connection_id = 3;
}

message LoginResponse
{
	ClientError error = 1;
  account_database account_player = 2;
}

message CreatePlayerRequest
{
  uint64 connection_id = 3;
}

message CreatePlayerResponse
{
  ClientError error = 1;
  account_database account_player = 2;
  uint64 player_id = 3;
}

message EnterGameRequest
{
  uint64 connection_id = 1;
  uint64 player_id = 2;
}

message EnterGameResponse
{
  ClientError error = 1;
  uint64 connection_id = 2;// for logic
  uint32 game_node_id = 3;
}

message DisconnectRequest
{
  uint64 connection_id = 1;
}

message DisconnectResponse
{
}

message LeaveGameRequest
{
  uint64 connection_id = 1;
}

service LoginService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc CreatPlayer (CreatePlayerRequest) returns (CreatePlayerResponse);
  rpc EnterGame (EnterGameRequest) returns (EnterGameResponse);
  rpc LeaveGame (LeaveGameRequest) returns (google.protobuf.Empty);
  rpc Disconnect (DisconnectRequest) returns (google.protobuf.Empty);
}
